--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <p class="text-gray-700 mb-4">
         Silakan hubungi saya untuk informasi lebih lanjut melalui email atau media sosial saya.
     </p>
-    <a href="mailto:alamat_email@contoh.com" class="email-button">
+    <a href="mailto:mikromalhakim@gmail.com" class="email-button">
         Kirim Email
     </a>
 </section>
