--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="certificate-item">
             <img src="Network fundamental_page-0001.jpg" alt="Sertifikat Aguna Course Network fundamental" class="certificate-image">
-            <h3 class="font-medium mt-2 text-center">Aguna Course</h3>
+            <h3 class="font-medium mt-2 text-center">Aa Course</h3>
             <p class="text-sm text-gray-500 text-center">Network fundamental</p>
         </div>
     </div>
